fixed ex-kuma clock flickering before positioning

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -763,6 +763,11 @@ details[open] > summary {
     height: 76px;
 }
 
+main .container.ex-kuma .clock {
+    transform: translateY(-50%);
+    visibility: hidden;
+}
+
 main .container.kuma .clock.clock-left {
     left: 25%;
     top: 50%;
